src/objects/Group__c.object
<CustomObject>
    <description>CertTracker Group</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Group is active</description>
        <inlineHelpText>Check to make Group active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Abbreviation__c</fullName>
        <description>Group Name Abbreviation</description>
        <inlineHelpText>Group name abbreviation</inlineHelpText>
        <label>Abbreviation</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Group_Certs__c</fullName>
        <description>Number of Group Certifications</description>
        <inlineHelpText>Number of Group Certifications</inlineHelpText>
        <label>Num Group Certs</label>
        <summaryForeignKey>GroupCertification__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>Active_Groups</fullName>
        <columns>NAME</columns>
        <columns>Group_Abbreviation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Groups</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group_Abbreviation__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Groups</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Groups</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Force_Abbrev_Upcase</fullName>
        <active>true</active>
        <description>Force Abbreviation to be uppercase</description>
        <errorConditionFormula>Group_Abbreviation__c &lt;&gt; UPPER(Group_Abbreviation__c)</errorConditionFormula>
        <errorDisplayField>Group_Abbreviation__c</errorDisplayField>
        <errorMessage>Abbreviation must be all uppercase</errorMessage>
    </validationRules>
</CustomObject>